--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/d3Service.js"></script>
+        <script src="scripts/directives/d3Bars.js"></script>
         <!-- endbuild -->
 </body>
 </html>
