angular restructure, modules

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,11 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <div class="menu">
+      <header>
+        <h1 class="text-muted">AngularD3</h1>
+      </header>
+    </div>
     <div ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -69,6 +74,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/d3Service.js"></script>
         <script src="scripts/directives/d3Bars.js"></script>
+        <script src="scripts/directives/d3Donut.js"></script>
         <!-- endbuild -->
 </body>
 </html>
