--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
       <header>
         <h1 class="text-muted">AngularD3</h1>
       </header>
+      <nav navigation></nav>
     </div>
     <div ng-view=""></div>
 
@@ -75,6 +76,7 @@
         <script src="scripts/services/d3Service.js"></script>
         <script src="scripts/directives/d3Bars.js"></script>
         <script src="scripts/directives/d3Donut.js"></script>
+        <script src="scripts/directives/navigation.js"></script>
         <!-- endbuild -->
 </body>
 </html>
