--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
         <script src="scripts/directives/d3Bars.js"></script>
         <script src="scripts/directives/d3Donut.js"></script>
         <script src="scripts/directives/navigation.js"></script>
+        <script src="scripts/services/Colors.js"></script>
         <!-- endbuild -->
 </body>
 </html>
