--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-animate/angular-animate.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -78,6 +79,8 @@
         <script src="scripts/directives/d3Donut.js"></script>
         <script src="scripts/directives/navigation.js"></script>
         <script src="scripts/services/Colors.js"></script>
+        <script src="scripts/controllers/Companies.js"></script>
+        <script src="scripts/controllers/Users.js"></script>
         <!-- endbuild -->
 </body>
 </html>
