async promise stuff, factory getting company data

--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
         <script src="scripts/directives/D3CompaniesSummary.js"></script>
         <script src="scripts/controllers/Companies.js"></script>
         <script src="scripts/controllers/Users.js"></script>
+        <script src="scripts/services/Companies.js"></script>
         <!-- endbuild -->
 </body>
 </html>
